feat(Challenges): Einige neue Challenges hinzugefügt